test/arrays/bradc/constArray.good
constArray.chpl:3: error: cannot assign to const variable
