test/arrays/bradc/constArray.chpl
const A: [1..3] int = [i in 1..3] i;

A(2) = -1;

writeln("A is: ", A);
